fixed next button mobile styling issue

--- a/src/Components/AboutMe/AboutMe.module.css
+++ b/src/Components/AboutMe/AboutMe.module.css
@@ -36,7 +36,7 @@
 
 @media (max-width: 900px) {
   .aboutMe {
-    padding: 15px;
+    padding: 0 15px;
   }
   .aboutMe .aboutHeader {
     font-size: 1rem;
