--- a/src/Components/ContactButton/ContactButton.module.css
+++ b/src/Components/ContactButton/ContactButton.module.css
@@ -29,3 +29,20 @@
   width: max-content;
   font-weight: 600;
 }
+
+@media (max-width: 900px) {
+  .button {
+    height: 40px;
+    width: 40px;
+    top: 95%;
+  }
+  .button img {
+    height: 25px;
+    width: 25px;
+  }
+  .text {
+    width: max-content;
+    font-weight: 500;
+    display: none;
+  }
+}
